--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,10 +1,10 @@
 .navbar {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: left;
+    justify-content: flex-end;
 }
 
 .navbar__item {
-    flex-basis: 20%;
+    flex-basis: 10%;
     list-style-type: none;
 }
