Added Rider Provider

--- a/src/components/bike/Bike.css
+++ b/src/components/bike/Bike.css
@@ -20,6 +20,10 @@
 }
 
 .searchedCity {
-    margin-top: 7rem;
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.searchForm {
     text-align: center;
 }
