Added my bikes to dashboard along with loading bike details

--- a/src/components/bike/Bike.css
+++ b/src/components/bike/Bike.css
@@ -15,6 +15,12 @@
     flex-wrap: wrap;
 }
 
+.mybikes {
+    display: flex;
+    flex-direction: row;
+    overflow: scroll;
+}
+
 .bike__image {
     height: 10rem;
 }
