--- a/src/components/bike/BikeDetail.css
+++ b/src/components/bike/BikeDetail.css
@@ -4,7 +4,7 @@
     border-radius: 20px;
     background-color: black;
     width: 75%;
-    height: fit-content;
+    height: 600px;
     color:white;
     text-align: center;
 }
@@ -16,7 +16,7 @@
 
 .secondThird {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 10px;
 }
 
@@ -27,10 +27,11 @@
 
 .bikeImageCont {
     padding: 10px;
-    background-color: white;
-    color: black;
-    width: 65%;
-    height: 300px;
+}
+
+
+.bikeimage {
+    height: 500px;
 }
 
 .thirdThird {
