--- a/src/components/bike/BikeDetail.css
+++ b/src/components/bike/BikeDetail.css
@@ -39,8 +39,12 @@
 }
 .finePrint {
     font-size: 10%;
+    text-align: left;
 }
 
 .reserveDialog {
     text-align: center;
+}
+.paymentDD {
+    color: black;
 }
