--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -8,7 +8,7 @@
     margin-top: 20px;
     background-color: lightgray;
     width: auto;
-    height: 200px;
+    height: fit-content;
 }
 
 .myGarage {
