--- a/src/components/reviews/Review.css
+++ b/src/components/reviews/Review.css
@@ -24,8 +24,9 @@
     flex-direction: column;
     border: 2px solid black;
     background-color: white;
-    width: fit-content;
+    width: 500px;
     margin: 10px;
+    overflow: auto;
 }
 
 .individualReview {
