--- a/src/components/reservation/Reservation.css
+++ b/src/components/reservation/Reservation.css
@@ -2,4 +2,37 @@
     display: flex;
     flex-direction: column;
     margin: 20px;
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
+
+.centered {
+    text-align: center;
+}
+
+.datepopup {
+    font-size: 1.5rem;
+}
+
+.bikeTitle {
+    font-size: 1.5rem;
+}
+
+.resPopUpCont {
+    border: 5px solid black;
+    background-color: lightgray;
+    border-radius: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.individualReservation {
+    font-size: 1rem;
+    padding: 5px;
+}
+
+.myreservations {
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
