--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -6,33 +6,36 @@
     margin: auto;
     color: black;
     margin-top: 20px;
-    background-color: lightgray;
+    background-color: rgba(0, 0, 0, 0.25);
     border: 5px solid black;
     border-radius: 1rem;
     width: auto;
     height: auto;
+    font-size: 1.25rem;
 }
 
 .myGarage {
     margin: auto;
     color: black;
     margin-top: 20px;
-    background-color: lightgray;
+    background-color: rgba(0, 0, 0, 0.25);
     border: 5px solid black;
     border-radius: 1rem;
     width: auto;
     height: auto;
+    font-size: 1.25rem;
 }
 
 .myReviews {
     margin: auto;
     color: black;
     margin-top: 20px;
-    background-color: lightgray;
+    background-color: rgba(0, 0, 0, 0.25);
     border: 5px solid black;
     border-radius: 1rem;
     width: auto;
     height: auto;
+    font-size: 1.25rem;
 }
 .addBikeButton {
     margin-left: 20px;
