--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -71,7 +71,8 @@
 
 
 
-.btn-grad {background-image: linear-gradient(to right, #FF512F 0%, #F09819  51%, #FF512F  100%)}
+
+.btn-grad {background-image: linear-gradient(to right, #000000 0%, #434343  51%, #000000  100%)}
 .btn-grad {
    margin: 10px;
    padding: 15px 45px;
@@ -79,7 +80,7 @@
    text-transform: uppercase;
    transition: 0.5s;
    background-size: 200% auto;
-   color: black;            
+   color: white;            
    box-shadow: 0 0 20px #eee;
    border-radius: 10px;
    display: block;
@@ -87,8 +88,9 @@
 
  .btn-grad:hover {
    background-position: right center; /* change the direction of the change here */
-   color: black;
+   color: #fff;
    text-decoration: none;
  }
+
 
 
