--- a/src/components/reservation/Reservation.css
+++ b/src/components/reservation/Reservation.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     margin: 20px;
     background-color: black;
+    border-radius: 10px;
     color: white;
     padding: 10px;
 }
@@ -30,9 +31,19 @@
 .individualReservation {
     font-size: 1rem;
     padding: 5px;
+    /* border: 2px solid black; */
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    width: fit-content;
+    margin: 10px;
 }
 
 .myreservations {
     margin-bottom: 10px;
     margin-left: 10px;
+}
+
+.addreviewMessage {
+    text-align: center;
+    margin-bottom: 5px;
 }
