--- a/src/components/reviews/Review.css
+++ b/src/components/reviews/Review.css
@@ -9,12 +9,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .topHalf {
-    border: 2px solid black;
-    background-color: white;
+    /* border: 2px solid black; */
+    /* background-color: white; */
     width: 600px;
     margin: 10px;
     padding: 10px;
@@ -23,8 +23,8 @@
 .bottomHalf {
     display: flex;
     flex-direction: column;
-    border: 2px solid black;
-    background-color: white;
+    /* border: 2px solid black;
+    background-color: white; */
     padding: 10px;
     width: 600px;
     margin: 10px;
@@ -48,4 +48,8 @@
 .mappedReservations {
     display: flex;
     flex-direction: row;
+}
+
+.reviewMessage {
+    text-align: left;
 }
