--- a/src/components/cycle.css
+++ b/src/components/cycle.css
@@ -2,7 +2,7 @@ body {
     /* background-color: #E4E4E1;
     background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
      background-blend-mode: normal, multiply; */
-    background-image: url(./images/cool-background.png);
+    background-image: url(./images/orangebckg.png);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
