--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -6,10 +6,11 @@
     margin: auto;
     color: black;
     margin-top: 20px;
-    background-color: rgba(0, 0, 0, 0.25);
-    border: 5px solid black;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    border: 2px solid black;
     border-radius: 1rem;
-    width: auto;
+    width: 75%;
     height: auto;
     font-size: 1.25rem;
 }
@@ -18,10 +19,11 @@
     margin: auto;
     color: black;
     margin-top: 20px;
-    background-color: rgba(0, 0, 0, 0.25);
-    border: 5px solid black;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    border: 2px solid black;
     border-radius: 1rem;
-    width: auto;
+    width: 75%;
     height: auto;
     font-size: 1.25rem;
 }
@@ -30,11 +32,13 @@
     margin: auto;
     color: black;
     margin-top: 20px;
-    background-color: rgba(0, 0, 0, 0.25);
-    border: 5px solid black;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    border: 2px solid black;
     border-radius: 1rem;
-    width: auto;
+    width: 75%;
     height: auto;
+    padding-bottom: 10px;
     font-size: 1.25rem;
 }
 .addBikeButton {
@@ -69,9 +73,6 @@
 }
 
 
-
-
-
 .btn-grad {background-image: linear-gradient(to right, #000000 0%, #434343  51%, #000000  100%)}
 .btn-grad {
    margin: 10px;
@@ -91,6 +92,8 @@
    color: #fff;
    text-decoration: none;
  }
+
+
 
 
 
