--- a/src/components/reservation/Reservation.css
+++ b/src/components/reservation/Reservation.css
@@ -32,10 +32,16 @@
     font-size: 1rem;
     padding: 5px;
     /* border: 2px solid black; */
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.397);
+    color: white;
     border-radius: 5px;
     width: fit-content;
     margin: 10px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
 
 .myreservations {
