--- a/src/components/reviews/Review.css
+++ b/src/components/reviews/Review.css
@@ -1,14 +1,37 @@
 .reviewsContainer {
     display: flex;
+    margin: auto;
     flex-direction: column;
     align-items: center;
+    border-radius: 20px;
+    width: 75%;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    padding-left: 25px;
     /* border: 2px solid black; */
 }
 
 .addReviewsContainer {
     display: flex;
+    margin: auto;
+    width: 75%;
     flex-direction: column;
     align-items: center;
+    border-radius: 20px;
+    /* background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px); */
+    /* border: 2px solid black; */
+}
+
+.addReviewsContainercont {
+    display: flex;
+    margin: auto;
+    width: 75%;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
     /* border: 2px solid black; */
 }
 
@@ -29,6 +52,7 @@
     width: 600px;
     margin: 10px;
     overflow: auto;
+    
 }
 
 .individualReview {
@@ -36,7 +60,7 @@
     border-radius: 10px;
     background-color: black;
     color: white;
-    width: 500px;
+    width: fit-content;
     margin: 20px;
     padding: 10px;
 }
